Fix overflow caused by about-us cards

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -10,6 +10,9 @@
     @include mix.mqh(420px) {
       width: 250px;
     }
+    @include mix.mqh(300px) {
+      width: 230px;
+    }
     background-color: var(--bg-secondary);
     border: 2px solid var(--fg-text);
     border-radius: 10px;
